kubernetes/apps/ntfy/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ntfy
spec:
  selector:
    matchLabels:
      app: ntfy
  serviceName: ntfy
  template:
    metadata:
      labels:
        app: ntfy
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 185
        runAsGroup: 185
        fsGroup: 185
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ntfy
          image: docker.io/binwiederhier/ntfy:v2.29.0
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ "ALL" ]
          args: ["serve", "--cache-file", "/var/cache/ntfy/cache.db"]
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: config
              mountPath: "/etc/ntfy"
              readOnly: true
            - name: templates
              mountPath: "/etc/ntfy/templates"
              readOnly: true
            - name: cache
              mountPath: "/var/cache/ntfy"
            - name: lib
              mountPath: "/var/lib/ntfy"
      volumes:
        - name: config
          configMap:
            name: ntfy
        - name: templates
          configMap:
            name: ntfy-templates
        - name: lib
          emptyDir: {}
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: cache
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
