kubernetes/apps/ntfy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
spec:
  selector:
    app: ntfy
  ports:
    - name: ntfy
      port: 80
      targetPort: http
